f fixed container position on small screens

--- a/frontend/src/views/Delete/Delete.module.css
+++ b/frontend/src/views/Delete/Delete.module.css
@@ -45,26 +45,27 @@
   height: 4rem;
 }
 
-.formOptionsLink a:first-child{
+.formOptionsLink a:first-child {
   color: #8685EF;
 }
 
 @media (max-width: 500px) {
 
-  .section {
-    height: calc(100vh - 25rem);
+  .contentOverride {
+    justify-content: center;
+    height: 100%;
   }
 
   .form {
     width: auto;
     min-width: 30em;
   }
-  
-  .formOptions{
+
+  .formOptions {
     align-self: center;
   }
-  
-  .title{
+
+  .title {
     font-size: 3em;
     align-self: center;
   }
